画像用の設定

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-SUPERUSER_NAME= admin
-SUPERUSER_EMAIL= admin@admin.com
-SUPERUSER_PASSWORD= samurai12
+SUPERUSER_NAME=admin
+SUPERUSER_EMAIL=admin@admin.com
+SUPERUSER_PASSWORD=samurai12
+
+CLOUDINARY_NAME=kosuke23
+CLOUDINARY_API_KEY=217626798251967
+CLOUDINARY_API_SECRET=dLNZTBjUsJaD3EUpAvyr_EFd9CA 
