--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
-mysqlclient
-django==5.0.4
-dj-database-url
-dj-static
-python-decouple
-django-environ
-gunicorn
-psycopg2-binary
-whitenoise
-stripe
-Pillow
-django-cloudinary-storage
-cloudinary
-django-environ~=0.4.5
+asgiref==3.8.1
+backports.zoneinfo==0.2.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+cloudinary==1.40.0
+dj-database-url==2.2.0
+Django==4.2.13
+django-cloudinary-storage==0.3.0
+django-environ==0.4.5
+idna==3.7
+mysqlclient==2.2.4
+pillow==10.3.0
+python-decouple==3.8
+requests==2.32.3
+six==1.16.0
+sqlparse==0.5.0
+stripe==9.11.0
+typing_extensions==4.12.0
+urllib3==2.2.1
+whitenoise==6.6.0
